tests/type-reconstruction/ill-typed/pairs/pairs-1.stella
language core;

extend with #pairs, #type-reconstruction;

fn main(x : auto) -> {Nat, auto}  {
  return
    { { { { { { 0, 0 }, { 0, 0 } }, { { 0, 0 }, { false, 0 } } }
        , { { { 0, 0 }, { 0, 0 } }, { { 0, 0 }, { 0, 0 } } } }
      , { { { { 0, 0 }, { 0, 0 } }, { { 0, Nat::iszero(x) }, { 0, 0 } } }
        , { { { 0, 0 }, { 0, 0 } }, { { 0, 0 }, { 0, 0 } } } } }
    , { { { { { 0, 0 }, { 0, 0 } }, { { 0, 0 }, { 0, 0 } } }
        , { { { 0, 0 }, { 0, 0 } }, { { 0, 0 }, { 0, 0 } } } }
      , { { { { 0, 0 }, { 0, 0 } }, { { 0, 0 }, { 0, 0 } } }
        , { { { 0, 0 }, { 0, 0 } }, { { 0, 0 }, { false, 0 } } } } } }.2.2.2.2.2
}
